--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset 'UTF-8';
 
 .custom-textarea {
     background: transparent;
@@ -277,7 +277,6 @@
         height: 100%;
         width: 100%;
         position: absolute;
-
         &.active {
             display: inline;
         }
@@ -401,6 +400,14 @@
 
 .post-create-message {
     padding: 15px;
+}
+
+.post-list__dynamic {
+    > div {
+        > div {
+            margin-bottom: 8px;
+        }
+    }
 }
 
 .post-create__container {
@@ -684,7 +691,6 @@
     @include clearfix;
     display: table;
     height: 100%;
-    padding-bottom: .5em;
     table-layout: fixed;
     width: 100%;
 
@@ -698,12 +704,10 @@
             }
         }
     }
-
     .loading-screen {
         position: relative;
         height: 40px;
-        padding: 0;
-
+        padding: 0px;
         .loading__content {
             height: 40px;
         }
@@ -1221,7 +1225,7 @@
     .post__content {
         display: table;
         margin: 0 auto;
-        padding: 0 5px;
+        padding: 0 8px 0 5px;
         position: relative;
         table-layout: fixed;
         width: 100%;
@@ -1676,7 +1680,7 @@
         &:before {
             content: '\f065';
             font-size: 14px;
-        }
+}
 
         &[data-expanded='true']:before {
             content: '\f066';
@@ -1876,36 +1880,34 @@
     }
 }
 
-/** changed 修为用户本人信息的显示方式，将消息移置右侧**/
 .post.current--user {
     text-align: right;
-
     .post__img {
         position: absolute;
         right: 10px;
         top: -10px;
     }
 
-    #postContent {
-        > div {
-            width: 100%;
-            text-align: right;
-        }
+#postContent {
+    > div {
+        width: 100%;
+        text-align: right;
+    }
 
-        .post__header {
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
+    .post__header {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
 
-            .post__header--info {
-                margin-right: 25px;
-            }
-        }
-
-        .post__body {
-            padding-right: 50px;
+        .post__header--info {
+            margin-right: 25px;
         }
     }
+
+    .post__body {
+        padding-right: 50px;
+    }
+}
 }
 
 
@@ -2028,14 +2030,12 @@
         // components/post/post_message_view/post_message_view.jsx must
         // be changed to match it
         max-height: 600px;
-
         .all-emoji {
             .emoticon {
                 min-height: 32px;
                 min-width: 32px;
                 vertical-align: top;
             }
-
             .emoticon--unicode {
                 font-size: 32px;
                 line-height: 1.1;
