--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -1120,8 +1120,7 @@
 
     &.post--comment {
         .post__body {
-            border-left: 4px solid $gray;
-            padding-left: 7px;
+            
 
             &.mention-comment {
                 border-left: 4px solid $yellow;
@@ -1499,6 +1498,30 @@
         word-wrap: break-word;
         border-radius: 10px;
         background-color:#e5e5e5;
+        .comment_kunwari{
+          position: relative;
+          display: flex;
+          color: #7f7f7f;
+          justify-content: flex-start;
+          align-items: flex-start;
+          text-align: left;
+          flex-direction: column;
+          padding-left: 10px;
+          span{
+            width: 100%;
+            &:nth-child(even){
+              font-size:90%;
+            }
+          }
+          &:before {
+            content:" ";
+            position: absolute;
+            border-radius: 5px;
+            left:0;top:0;bottom:0;
+            width:3px; height:100%;
+            background-color:#fff;
+          }
+        }
         &.post--ephemeral {
             padding-right: 20px !important;
         }
@@ -1882,8 +1905,11 @@
 }
 
 .post.current--user {
-    a{
-      color: #fff;
+    a.mention-link{
+      color: #f2f2f2;
+      &:hover {
+        color:#f2f2f2;
+      }
     }
     .post__img {
         position: absolute;
@@ -1909,6 +1935,19 @@
         float:right;
         color: white;
         background-color:#2171f2 !important;
+        .comment_kunwari{
+
+          color: #efefef;
+          a{
+            color: #f2f2f2;
+            &:hover {
+              color:#f2f2f2;
+            }
+          }
+          &:before {
+            background-color: #fff;
+          }
+        }
     }
 }
 }
@@ -2038,6 +2077,8 @@
                 min-height: 32px;
                 min-width: 32px;
                 vertical-align: top;
+                height: 100px;
+                width: 100px;
             }
             .emoticon--unicode {
                 font-size: 32px;
